--- a/inicio.html
+++ b/inicio.html
@@ -33,7 +33,7 @@
            
             </p>
             <div>
-                <img src="emoji.jpeg">
+                <img src="amorbb.jpeg.jpeg">
     
             </div>
             <p class="t1">
